New option for 5G deployment with ueransim

--- a/srslte/enb_zmq.conf
+++ b/srslte/enb_zmq.conf
@@ -410,10 +410,10 @@ metrics_csv_filename = /logs/enb_metrics.csv
 report_json_enable   = true
 report_json_filename = /logs/enb_report.json
 #report_json_asn1_oct = false
-alarms_log_enable    = true
-alarms_filename      = /log/enb_alarms.log
-tracing_enable       = true
-tracing_filename     = /log/enb_tracing.log
+#alarms_log_enable    = true
+#alarms_filename      = /log/enb_alarms.log
+#tracing_enable       = true
+#tracing_filename     = /log/enb_tracing.log
 #tracing_buffcapacity = 1000000
 #stdout_ts_enable     = false
 #tx_amplitude         = 0.6
