--- a/srslte/ue_5g_zmq.conf
+++ b/srslte/ue_5g_zmq.conf
@@ -483,8 +483,8 @@ enable = false
 metrics_period_secs   = 5
 metrics_csv_enable    = true
 metrics_csv_filename  = /logs/ue_metrics.csv
-tracing_enable        = true
-tracing_filename      = /logs/ue_tracing.log
+#tracing_enable        = true
+#tracing_filename      = /logs/ue_tracing.log
 metrics_json_enable   = true
 metrics_json_filename = /logs/ue_metrics.json
 #tracing_buffcapacity  = 1000000
