--- a/srslte/ue_zmq.conf
+++ b/srslte/ue_zmq.conf
@@ -469,7 +469,7 @@ metrics_csv_enable    = true
 metrics_csv_filename  = /logs/ue_metrics.csv
 metrics_json_enable   = true
 metrics_json_filename = /logs/ue_metrics.json
-tracing_enable        = true
-tracing_filename      = /logs/ue_tracing.log
+#tracing_enable        = true
+#tracing_filename      = /logs/ue_tracing.log
 #tracing_buffcapacity  = 1000000
 #have_tti_time_stats   = true
